bitfield/tests/09-variant-out-of-range2.stderr
error[E0080]: evaluation of constant value failed
 --> tests/09-variant-out-of-range2.rs:9:10
  |
9 | #[derive(BitfieldSpecifier)]
  |          ^^^^^^^^^^^^^^^^^ attempt to compute `0_usize - 1_usize`, which would overflow
  |
  = note: this error originates in the derive macro `BitfieldSpecifier` (in Nightly builds, run with -Z macro-backtrace for more info)
